--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   box-sizing: border-box;
 }
 
-.bg-image{
+.bg-main-image{
   background-image: url('/mainbg.jpg');
+}
+.bg-feature-image{
+  background-image: url('/banner.jpg');
 }
